# ModernOpenGL46

./: .gitignore  CMakeLists.txt  LICENSE  OpenGLDSA.txt  cmake_source_dir.h.in  main.cpp  root.h.in
src/01-window/01-Application/: main.cpp
src/01-window/01-draw/: main.cpp  simple_vs.glsl
src/01-window/02-Triangle/: 02-GL-Triangle.cpp
src/01-window/03-Shader/: 03-Shader.cpp  shader.fs  shader.vs
